Fixed overlap with iOS 'close app' strip on some devices

--- a/styles/page.sass
+++ b/styles/page.sass
@@ -61,6 +61,7 @@ $accent-color: #616A81
     #content
         margin-left: auto
         margin-right: auto
+        padding-bottom: 32pt
         text-align: left
         width: 80%
         img
